--- a/frontend/interface/index.html
+++ b/frontend/interface/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB69gfwk9K9qFwaRG4FNacGbjWs0bloUIedOOUFR9-rOFJN1tVHTvqfF7cAUZpE7a-AzY&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>OptiLands</title>
   </head>
   <body>
     <div id="root"></div>
